--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,11 @@ build/
 nbbuild/
 dist/
 nbdist/
-nbactions.xml
-nb-configuration.xml
+/nbactions.xml
+/nb-configuration.xml
 
 # Class Files #
-*.class
+**.class
 
 # Package Files #
 *.jar
